--- a/src/doc/scss/components/_exemple.scss
+++ b/src/doc/scss/components/_exemple.scss
@@ -18,7 +18,7 @@
   & > figcaption {
     display: block;
   }
-  &:has(qc-select) {
+  &:has(qc-select, qc-tooltip) {
     overflow-x: visible;
   }
 }
