--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -31,3 +31,5 @@
 @use "../components/Label/label";
 @use "../components/DropdownList/dropdownList";
 @use "../components/Button/button";
+@use "../components/Tooltip/tooltip";
+@use "../components/Scrollbar/scrollbar";
