--- a/src/sdg/bases/Icon/_icons.scss
+++ b/src/sdg/bases/Icon/_icons.scss
@@ -1,5 +1,6 @@
 @use "../../scss/qc-sdg-lib" as *;
-
+@use "sass:list";
+$noMask: information-tooltip question-tooltip;
 
 qc-icon {
   display: inline-flex;
@@ -26,13 +27,20 @@ qc-icon {
   @each $name, $url in $images {
     // classes pour les icônes
       @at-root .icon-#{$name} {
-        mask-image: getImageUrl($name);
+        @if (list.index($noMask, $name)) {
+          background-image: getImageUrl($name);
+          background-color: transparent;
+          background-repeat: no-repeat;
+          background-size: 100%;
+        }
+        @else {
+          mask-image: getImageUrl($name);
+        }
+
       }
     &[data-img-type=#{$name}] {
       @extend .icon-#{$name};
     }
-
-
   }
   &.qc-icon-custom {
     mask-image: var(--img-src);
