Correction de la doc

--- a/src/sdg/components/Alert/_alert.html
+++ b/src/sdg/components/Alert/_alert.html
@@ -11,7 +11,7 @@
 </p>
 
 <qc-doc-exemple id="alert-warning"
-                caption="Exemple d’alerte jaune masquable. Elle reste masquée après rafraîchissement de la page pendant 5 secondes.">
+                caption="Exemple d’alerte jaune masquable. Elle reste masquée après rafraîchissement de la page tant que la session courante est active.">
   <qc-alert id="alerte-masquable"
             type="warning"
             maskable="true"
@@ -21,7 +21,6 @@
   >
   </qc-alert>
 </qc-doc-exemple>
-<!--            <qc-code target-id="alert-warning"></qc-code>-->
 
 <h4>Alerte bleue</h4>
 <qc-doc-exemple id="alert-general"
@@ -31,8 +30,6 @@
     <p>Alerte bleue d’importance modérée <a href="#">avec un lien textuel</a></p>
   </qc-alert>
 </qc-doc-exemple>
-
-<!--            <qc-code target-id="alert-general"></qc-code>-->
 
 <h3>Documentation technique</h3>
 
