Doc - correction d'un bug qui masque les menus déroulants dans les exemples de la doc + build

--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -167,6 +167,9 @@ code.hljs {
 .exemple-area > figure > figcaption {
   display: block;
 }
+.exemple-area > figure:has(qc-select) {
+  overflow-x: visible;
+}
 
 table.qc-table {
   margin-bottom: 0;
@@ -175,9 +178,6 @@ table.qc-table {
   max-width: 100%;
   overflow: auto;
   border-collapse: collapse;
-  /* ----- Striped tables ----- */
-  /* ----- Bordered tables ----- */
-  /* ----- TODO add footer style ----- */
 }
 table.qc-table > thead {
   background-color: var(--qc-color-blue-dark);
@@ -194,11 +194,20 @@ table.qc-table thead th, table.qc-table tbody th, table.qc-table tbody td {
   text-align: left;
   padding: var(--qc-spacer-xs);
 }
+table.qc-table {
+  /* ----- Striped tables ----- */
+}
 table.qc-table.qc-striped tbody tr:nth-of-type(even) {
   background-color: var(--qc-color-grey-pale);
 }
+table.qc-table {
+  /* ----- Bordered tables ----- */
+}
 table.qc-table.qc-bordered tbody th, table.qc-table.qc-bordered tbody td {
   border-bottom: 1px solid var(--qc-color-grey-light);
+}
+table.qc-table {
+  /* ----- TODO add footer style ----- */
 }
 
 .ui-autocomplete {
@@ -375,11 +384,13 @@ a.pseudo-active > .qc-ext-link-img {
 a.pseudo-focus {
   color: var(--qc-color-link-hover);
   text-decoration: none;
-  outline: 2px solid var(--qc-color-link-focus-outline);
-  outline-offset: 1px;
 }
 a.pseudo-focus .qc-ext-link-text {
   text-decoration: none;
+}
+a.pseudo-focus {
+  outline: 2px solid var(--qc-color-link-focus-outline);
+  outline-offset: 1px;
 }
 a.pseudo-focus > .qc-ext-link-img {
   background-color: var(--qc-color-link-text);
