Revert de ExternalLink vers un comportement corrigé de v1.4.6

--- a/src/doc/scss/qc-doc-sdg.scss
+++ b/src/doc/scss/qc-doc-sdg.scss
@@ -94,39 +94,24 @@ h1,h2,h3,h4,h5,h6 {
 
 a {
 
-  &.pseudo-visited {
-    color: token-value(color,link,visited);
-    & > .qc-ext-link-img {
-      background-color: token-value(color, link, visited);
-    }
-  }
   &.pseudo-hover {
     @include hover-link();
-    & > .qc-ext-link-img {
-      background-color: token-value(color, link, hover);
-    }
   }
   &.pseudo-active {
     @include active-link();
-    & > .qc-ext-link-img {
-      background-color: token-value(color, link, active);
-    }
   }
   &.pseudo-focus {
     @include focus-link();
-    & > .qc-ext-link-img {
-      background-color: token-value(color, link, text);
-    }
+  }
+  &.pseudo-visited {
+    color: token-value(color,link,visited)!important;
   }
   &.not-visited:visited:not(:hover) {
     color: token-value(color,link,text);
-    & > .qc-ext-link-text {
-      color: token-value(color,link,text);
-    }
   }
 }
 
-div.qc-ext-link-img {
+span.qc-ext-link-img {
   a.pseudo-visited  & {
     background: token-value(color link visited)!important;
   }
@@ -138,9 +123,6 @@ div.qc-ext-link-img {
   }
   a.pseudo-active  & {
     background: token-value(color link active)!important;
-  }
-  a.not-visited:visited:not(:hover) & {
-    background: token-value(color link text)!important;
   }
 }
 
