--- a/src/sdg/bases/links/_links.scss
+++ b/src/sdg/bases/links/_links.scss
@@ -4,10 +4,6 @@
 
 a {
   color: token-value(color, link, text);
-  &:has(.qc-ext-link-text) {
-    white-space: nowrap;
-    text-decoration: none;
-  }
   &:visited {
     color: token-value(color, link, visited);
   }
@@ -23,35 +19,33 @@ a {
   .img-wrap {
     white-space: nowrap;
   }
-}
 
-.qc-external-link {
-  .qc-ext-link-text {
-    white-space: normal;
-    text-decoration: underline;
-  }
 }
+div.qc-ext-link-img {
 
-.qc-ext-link-img {
   @extend .icon-external-link;
   $ratio : math.div(11,16) * 1em;
   height: $ratio;
   width: $ratio;
+  display: inline-block;
   background: token-value(color link text);
   mask-size: $ratio;
-  display: inline-block;
-  mask-repeat: no-repeat;
-
-  a:visited & {
+  margin-left: 4px;
+  a:visited  & {
     background: token-value(color link visited);
   }
-  a:focus & {
+  a:focus  & {
     background: token-value(color link hover);
   }
-  a:hover & {
+  a:hover  & {
     background: token-value(color link hover);
   }
-  a:active & {
+  a:active  & {
     background: token-value(color link active);
+  }
+
+
+  .img-wrap + & {
+    display: none;
   }
 }
