Textfield - correction d'un bug - les libellés étaient dans le dom d'ombre.

--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -4,10 +4,10 @@
 <qc-doc-exemple caption="Exemples 1 - différents champs de texte. Soumettre le formulaire pour voir les messages d'erreur.">
   <form id="formulaire-champs-textes">
     <qc-textfield
-            label="Nom complet"
             size="md"
             required
     >
+      <label>Nom complet</label>
       <input type="text"
              name="code-postal"
              placeholder="ex : Jean Tremblay"
