--- a/src/sdg/components/ChoiceGroup/Test/checkboxBaselineTest.html
+++ b/src/sdg/components/ChoiceGroup/Test/checkboxBaselineTest.html
@@ -252,5 +252,9 @@
     </div>
 </div>
 
-
-
+<qc-checkbox required invalid-on-blur>
+    <label for="on-blur-validation">
+        <input type="checkbox" id="on-blur-validation">
+        <span>Validation on blur</span>
+    </label>
+</qc-checkbox>
