Ajout de invalidOnblur sur qc-select

--- a/src/sdg/components/DropdownList/Test/dropdownListBaselineTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListBaselineTest.html
@@ -150,6 +150,7 @@
           search-placeholder="Rechercher un type restaurant"
           required
           invalid-text="Veuillez choisir un type de restaurant."
+          invalid-on-blur
   >
     <label for="dropdown-list-restaurants-select">Types de restaurants</label>
     <select id="dropdown-list-restaurants-select">
