Ajout de invalidOnblur sur qc-textfield

--- a/src/sdg/components/TextField/Test/textFieldBaselineTest.html
+++ b/src/sdg/components/TextField/Test/textFieldBaselineTest.html
@@ -126,8 +126,9 @@
         size="xl"
         max-length="10"
         required
+        invalid-on-blur
 >
-    <textarea name="zone-xl"></textarea>
+    <textarea id="suggestions-blur-test" name="zone-xl"></textarea>
 </qc-textfield>
 
 <qc-textfield label="Suggestions"
