--- a/src/sdg/components/DropdownList/_select.html
+++ b/src/sdg/components/DropdownList/_select.html
@@ -176,6 +176,12 @@
             <td>Message d’erreur à afficher lorsque la liste déroulante est invalide</td>
         </tr>
         <tr>
+            <td>invalid-on-blur</td>
+            <td>na</td>
+            <td>na</td>
+            <td>Active la validation de la case à cocher sur un changement de focus</td>
+        </tr>
+        <tr>
             <td>placeholder</td>
             <td>Texte</td>
             <td>Faire une sélection / Select an option</td>
