--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -178,6 +178,12 @@
       <td>aucune</td>
       <td>Message d'erreur personnalisé affiché lorsque le champ est invalide</td>
     </tr>
+    <tr>
+        <td>invalid-on-blur</td>
+        <td>na</td>
+        <td>na</td>
+        <td>Active la validation de la case à cocher sur un changement de focus</td>
+    </tr>
     </tbody>
   </table>
 </div>
