Ajout de invalidOnBlur sur qc-choice-group

--- a/src/sdg/components/ChoiceGroup/Test/checkboxBaselineTest.html
+++ b/src/sdg/components/ChoiceGroup/Test/checkboxBaselineTest.html
@@ -252,9 +252,13 @@
     </div>
 </div>
 
-<qc-checkbox required invalid-on-blur>
-    <label for="on-blur-validation">
-        <input type="checkbox" id="on-blur-validation">
-        <span>Validation on blur</span>
+<qc-choice-group required invalid-on-blur legend="Groupe on blur" name="group-on-blur">
+    <label for="on-blur-validation-group-1">
+        <input type="checkbox" id="on-blur-validation-group-1">
+        <span>Catalogue 1</span>
     </label>
-</qc-checkbox>
+    <label for="on-blur-validation-group-2">
+        <input type="checkbox" id="on-blur-validation-group-2">
+        <span>Catalogue 2</span>
+    </label>
+</qc-choice-group>
