--- a/src/sdg/components/ChoiceGroup/_choiceGroup.html
+++ b/src/sdg/components/ChoiceGroup/_choiceGroup.html
@@ -254,6 +254,12 @@
       <td>Message d’erreur à afficher lorsque le groupe est invalide.</td>
     </tr>
     <tr>
+        <td>invalid-on-blur</td>
+        <td>na</td>
+        <td>na</td>
+        <td>Vérifie qu'au moins une option est sélectionnée lors d'une perte de focus</td>
+    </tr>
+    <tr>
       <td>selection-button</td>
       <td>na</td>
       <td>na</td>
