--- a/src/sdg/components/Checkbox/_checkbox.html
+++ b/src/sdg/components/Checkbox/_checkbox.html
@@ -84,7 +84,7 @@
         <td>invalid-on-blur</td>
         <td>na</td>
         <td>na</td>
-        <td>Active la validation de la case à cocher sur un changement de focus</td>
+        <td>Vérifie que la case est cochée lors d'une perte de focus</td>
     </tr>
     </tbody>
   </table>
