--- a/src/sdg/components/DropdownList/_select.html
+++ b/src/sdg/components/DropdownList/_select.html
@@ -179,7 +179,7 @@
             <td>invalid-on-blur</td>
             <td>na</td>
             <td>na</td>
-            <td>Active la validation de la case à cocher sur un changement de focus</td>
+            <td>Vérifie la présence d'une donnée dans <code>value</code> lors d'une perte de focus</td>
         </tr>
         <tr>
             <td>placeholder</td>
