--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -182,7 +182,7 @@
         <td>invalid-on-blur</td>
         <td>na</td>
         <td>na</td>
-        <td>Active la validation de la case à cocher sur un changement de focus</td>
+        <td>Vérifie la présence de donnée saisie lors d'une perte de focus</td>
     </tr>
     </tbody>
   </table>
