Transfert de la scss de Alert dans le composant

--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -15,11 +15,11 @@
 @use "utilities/themes";
 @use "utilities/states";
 @use "../bases/Icon/icons";
-@use "../components/IconButton/iconButton";
+//@use "../components/IconButton/iconButton";
 @use "../components/Notice/notice";
 @use "../components/PivHeader/pivHeader";
 @use "../components/PivFooter/pivFooter";
-@use "../components/Alert/alert";
+//@use "../components/Alert/alert";
 @use "../components/ToTop/toTop";
 @use "../components/SearchBar/searchBar";
 @use "../components/SearchInput/searchInput";
